--- a/DrawsHistoricStats.html
+++ b/DrawsHistoricStats.html
@@ -10,8 +10,9 @@
   <link rel="stylesheet" href="css/nicepage.css" media="screen">
   <link rel="stylesheet" href="css/Team-Info-Page.css" media="screen">
   <script class="u-script" type="text/javascript" src="javascript/jquery.js" "="" defer=""></script>
-    <script class=" u-script" type="text/javascript" src="javascript/nicepage.js" "="" defer=""></script>
-    <script class=" u-script" type="text/javascript" src="javascript/constants.js"></script>
+  <script class=" u-script" type="text/javascript" src="javascript/nicepage.js" "="" defer=""></script>
+  <script class=" u-script" type="text/javascript" src="javascript/constants.js"></script>
+  <script class=" u-script" type="text/javascript" src="javascript/common/sortTables.js"></script>
   <script class="u-script" type="text/javascript" src="javascript/common/coreAPIcalls.js" defer=""></script>
   <script class=" u-script" type="text/javascript" src="javascript/DrawsHistoricStats.js" "="" defer=""></script>
   <meta name=" generator" content="Nicepage 4.16.0, nicepage.com">
@@ -132,7 +133,7 @@
       <h4 class="u-text u-text-default u-text-1 teamNameTitle" style="text-shadow: none;"></h4>
       <img src="images/handshake.png" style="display: block; margin: 40px auto; width: 10%;">
       <div class="u-table u-table-responsive u-table-1" style="margin-top: 20px;">
-        <table class="u-table-entity">
+        <table class="u-table-entity" id="drawHisStatsTable">
           <colgroup>
             <col width="6%">
             <col width="40%">
@@ -144,12 +145,12 @@
           </colgroup>
           <thead class="u-custom-font u-font-source-sans-pro u-grey-50 u-table-header u-table-header-1">
             <tr style="height: 40px;">
-              <th class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">SEASON</th>
-              <th class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Competition</th>
-              <th class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">% draws</th>
-              <th class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">total draws</th>
-              <th class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">std dev</th>
-              <th class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">coeff dev</th>
+              <th onclick="sortTable(0,'drawHisStatsTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">SEASON</th>
+              <th onclick="sortTable(1,'drawHisStatsTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Competition</th>
+              <th onclick="sortTable(2,'drawHisStatsTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">% draws</th>
+              <th onclick="sortTable(3,'drawHisStatsTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">total draws</th>
+              <th onclick="sortTableNumbers(4,'drawHisStatsTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">std dev</th>
+              <th onclick="sortTableNumbers(5,'drawHisStatsTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">coeff dev</th>
               <th class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">no draws sequence</th>
             </tr>
           </thead>
