--- a/EH-All-Matches.html
+++ b/EH-All-Matches.html
@@ -10,8 +10,9 @@
   <link rel="stylesheet" href="css/nicepage.css" media="screen">
   <link rel="stylesheet" href="css/Team-Info-Page.css" media="screen">
   <script class="u-script" type="text/javascript" src="javascript/jquery.js" "="" defer=""></script>
-    <script class=" u-script" type="text/javascript" src="javascript/nicepage.js" "="" defer=""></script>
-    <script class=" u-script" type="text/javascript" src="javascript/constants.js"></script>
+  <script class=" u-script" type="text/javascript" src="javascript/nicepage.js" "="" defer=""></script>
+  <script class=" u-script" type="text/javascript" src="javascript/constants.js"></script>
+  <script class=" u-script" type="text/javascript" src="javascript/common/sortTables.js"></script>
   <script type="text/javascript">
     var currentStrategy = EURO_HANDICAP_ID;
   </script>
@@ -146,7 +147,7 @@
           played</b></h4>
       <!-- <h3 class="u-text u-text-default u-text-1">Team Name</h3> -->
       <div class="u-table u-table-responsive u-table-1" style="margin-top: 30px;">
-        <table class="u-table-entity">
+        <table class="u-table-entity" id="ehMatchesTable">
           <colgroup>
             <col width="6.6%">
             <col width="9.4%">
@@ -160,12 +161,12 @@
           <thead class="u-custom-font u-font-source-sans-pro u-grey-50 u-table-header u-table-header-1">
             <tr style="height: 30px;">
               <th class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">DELETE</th>
-              <th class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Date</th>
-              <th class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Match</th>
-              <th class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Final Result</th>
-              <th class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Odd</th>
-              <th class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Stake</th>
-              <th class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Seq Level</th>
+              <th onclick="sortTable(1,'ehMatchesTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Date</th>
+              <th onclick="sortTable(2,'ehMatchesTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Match</th>
+              <th onclick="sortTable(3,'ehMatchesTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Final Result</th>
+              <th onclick="sortTableNumbers(4,'ehMatchesTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Odd</th>
+              <th onclick="sortTableNumbers(5,'ehMatchesTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Stake</th>
+              <th onclick="sortTableNumbers(6,'ehMatchesTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Seq Level</th>
               <th class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Update Match</th>
             </tr>
           </thead>
