--- a/TeamInfoPage.html
+++ b/TeamInfoPage.html
@@ -12,8 +12,9 @@
   <link rel="stylesheet" href="css/StrategyPage.css" media="screen">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script class="u-script" type="text/javascript" src="javascript/jquery.js" "="" defer=""></script>
-    <script class=" u-script" type="text/javascript" src="javascript/nicepage.js" "="" defer=""></script>
-    <script class=" u-script" type="text/javascript" src="javascript/constants.js"></script>
+  <script class=" u-script" type="text/javascript" src="javascript/nicepage.js" "="" defer=""></script>
+  <script class=" u-script" type="text/javascript" src="javascript/constants.js"></script>
+  <script class=" u-script" type="text/javascript" src="javascript/common/sortTables.js"></script>
   <link rel="stylesheet" href="css/modalDialogBox.css" media="screen">
   <script class="u-script" type="text/javascript" src="javascript/common/modalDialogBox.js" defer=""></script>
   <script class="u-script" type="text/javascript" src="javascript/common/coreAPIcalls.js" defer=""></script>
@@ -175,7 +176,7 @@
 
 
       <div class="u-table u-table-responsive u-table-1" style="margin-top: 30px;">
-        <table class="u-table-entity">
+        <table class="u-table-entity" id="teamMatchesTable">
           <colgroup>
             <col width="6.6%">
             <col width="9.4%">
@@ -189,12 +190,12 @@
           <thead class="u-custom-font u-font-source-sans-pro u-grey-50 u-table-header u-table-header-1">
             <tr style="height: 30px;">
               <th class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">DELETE</th>
-              <th class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Date</th>
-              <th class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Match</th>
-              <th class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Final Result</th>
-              <th class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Odd</th>
-              <th class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Stake</th>
-              <th class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Seq Level</th>
+              <th onclick="sortTable(1,'teamMatchesTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Date</th>
+              <th onclick="sortTable(2,'teamMatchesTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Match</th>
+              <th onclick="sortTable(3,'teamMatchesTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Final Result</th>
+              <th onclick="sortTableNumbers(4,'teamMatchesTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Odd</th>
+              <th onclick="sortTableNumbers(5,'teamMatchesTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Stake</th>
+              <th onclick="sortTableNumbers(6,'teamMatchesTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Seq Level</th>
               <th class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Update Match</th>
             </tr>
           </thead>
