implement sorting tables and add select in evolution bets graph

--- a/Bets-Page.html
+++ b/Bets-Page.html
@@ -148,6 +148,12 @@
     ">
           <canvas id="graphBk"
             style="max-width:100%; max-height:100%;display:unset; "></canvas>
+            <form action="#" style="text-align: center; margin-top: 4%; margin-bottom: 4%;">
+              <label for="lang">Select Month</label>
+              <select id="monthSelect">
+                <option value="all">All</option>
+              </select>
+            </form>
 
         </div>
       </div>
@@ -260,6 +266,11 @@
           </div>
           <div class="bkroll-u-container-style bkroll-u-list-item bkroll-u-opacity bkroll-u-opacity-70 bkroll-u-radius-50 bkroll-u-repeater-item bkroll-u-shape-round bkroll-u-white bkroll-u-list-item-11" style="max-width: 80%; margin: auto;">
             <div id="bkroll-highGreenOdd" class="bkroll-u-container-layout bkroll-u-similar-container bkroll-u-container-layout-11">
+              <!-- <p class="bkroll-u-align-center bkroll-u-text bkroll-u-text-default bkroll-u-text-11">Sample text. Click to select the Text Element.</p> -->
+            </div>
+          </div>
+          <div class="bkroll-u-container-style bkroll-u-list-item bkroll-u-opacity bkroll-u-opacity-70 bkroll-u-radius-50 bkroll-u-repeater-item bkroll-u-shape-round bkroll-u-white bkroll-u-list-item-11" style="max-width: 80%; margin: auto;">
+            <div id="bkroll-totalInvestment" class="bkroll-u-container-layout bkroll-u-similar-container bkroll-u-container-layout-11">
               <!-- <p class="bkroll-u-align-center bkroll-u-text bkroll-u-text-default bkroll-u-text-11">Sample text. Click to select the Text Element.</p> -->
             </div>
           </div>
