add new column to hockey draws data

--- a/HistoricStatsData.html
+++ b/HistoricStatsData.html
@@ -177,11 +177,12 @@
       <div class="u-table u-table-responsive u-table-1" style="margin-top: 20px;">
         <table class="u-table-entity" id="historicStatsTable">
           <colgroup>
-            <col width="30%">
+            <col width="25%">
             <col width="10%">
             <col width="10%">
-            <col width="20%">
-            <col width="20%">
+            <col width="15%">
+            <col width="15%">
+            <col width="15%">
           </colgroup>
           <thead class="u-custom-font u-font-source-sans-pro u-grey-50 u-table-header u-table-header-1">
             <tr style="height: 40px;">
@@ -190,6 +191,7 @@
               <th onclick="sortTable(2,'historicStatsTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">End Season</th>
               <th onclick="sortTable(3,'historicStatsTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Draws Hunter Score</th>
               <th onclick="sortTable(4,'historicStatsTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Margin Wins Score</th>
+              <th onclick="sortTable(5,'historicStatsTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Hockey Draws Hunter</th>
             </tr>
           </thead>
           <tbody id="histStatsTeamsTable" class="u-align-left u-custom-font u-font-source-sans-pro u-table-alt-grey-15 u-table-body">
