--- a/HistoricStatsData.html
+++ b/HistoricStatsData.html
@@ -173,28 +173,52 @@
     <div class="u-clearfix u-sheet u-sheet-1"><span
         class="u-file-icon u-icon u-icon-rectangle u-text-palette-4-dark-2 u-icon-1" onclick="history.back()"><img
           src="images/17699-278f9150.png" alt="" style="cursor: pointer;"></span>
+          <form action="#" style="text-align: center; margin-top: 4%; margin-bottom: 4%;">
+            <label for="lang">Select Sport</label>
+            <select id="sportSelect">
+              <option value="football">Football</option>
+              <option value="hockey">Hockey</option>
+            </select>
+          </form>
       <h4 class="u-text u-text-default u-text-1" style="text-shadow: none;">HISTORIC STATS DATA - List of all Teams</h4>
       <div class="u-table u-table-responsive u-table-1" style="margin-top: 20px;">
-        <table class="u-table-entity" id="historicStatsTable">
+        <table class="u-table-entity" id="footballTableStats">
           <colgroup>
-            <col width="25%">
-            <col width="10%">
-            <col width="10%">
+            <col width="30%">
             <col width="15%">
             <col width="15%">
-            <col width="15%">
+            <col width="20%">
+            <col width="20%">
           </colgroup>
           <thead class="u-custom-font u-font-source-sans-pro u-grey-50 u-table-header u-table-header-1">
             <tr style="height: 40px;">
-              <th onclick="sortTable(0,'historicStatsTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">TEAM</th>
-              <th onclick="sortTable(1,'historicStatsTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Begin Season</th>
-              <th onclick="sortTable(2,'historicStatsTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">End Season</th>
-              <th onclick="sortTable(3,'historicStatsTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Draws Hunter Score</th>
-              <th onclick="sortTable(4,'historicStatsTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Margin Wins Score</th>
-              <th onclick="sortTable(5,'historicStatsTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Hockey Draws Hunter</th>
+              <th onclick="sortTable(0,'footballTableStats')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">TEAM</th>
+              <th onclick="sortTable(1,'footballTableStats')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Begin Season</th>
+              <th onclick="sortTable(2,'footballTableStats')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">End Season</th>
+              <th onclick="sortTable(3,'footballTableStats')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Draws Hunter Score</th>
+              <th onclick="sortTable(4,'footballTableStats')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Margin Wins Score</th>
             </tr>
           </thead>
           <tbody id="histStatsTeamsTable" class="u-align-left u-custom-font u-font-source-sans-pro u-table-alt-grey-15 u-table-body">
+          </tbody>
+        </table>
+
+        <table class="u-table-entity" id="hockeyTableStats" style="display: none;" >
+          <colgroup>
+            <col width="40%">
+            <col width="15%">
+            <col width="15%">
+            <col width="30%">
+          </colgroup>
+          <thead class="u-custom-font u-font-source-sans-pro u-grey-50 u-table-header u-table-header-1">
+            <tr style="height: 40px;">
+              <th onclick="sortTable(0,'hockeyTableStats')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">TEAM</th>
+              <th onclick="sortTable(1,'hockeyTableStats')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Begin Season</th>
+              <th onclick="sortTable(2,'hockeyTableStats')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">End Season</th>
+              <th onclick="sortTable(3,'hockeyTableStats')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Draws Hunter Score</th>
+            </tr>
+          </thead>
+          <tbody id="hockeyStatsTeamsTableBody" class="u-align-left u-custom-font u-font-source-sans-pro u-table-alt-grey-15 u-table-body">
           </tbody>
         </table>
       </div>
